--- a/html/finish.html
+++ b/html/finish.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizlet Score</title>
-    <link rel="stylesheet" href="./app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,7 @@
                     name="username" 
                     id="username" 
                     placeholder="UserName"
+                    autocomplete="off"
                 />
                 <button 
                     type="submit" 
@@ -28,10 +29,10 @@
                 Save
                 </button>
                 <a class="btn" href="./game.html">Play Again</a>
-                <a class="btn" href="/">Go Home</a>
+                <a class="btn" href="./index.html">Go Home</a>  
             </form>
         </div>
     </div>
-    <script src="./finish.js"></script>
+    <script src="../js/finish.js"></script>
 </body>
 </html>
