--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizlet Quiz</title>
-    <link rel="stylesheet" href="app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
 </head>
 <body>
     <!-- For quick class and id generations, enter . or #, type class name and press tab+tab-->
@@ -13,7 +13,7 @@
         <div id="home" class="flex-center flex-column"> 
             <h1>Quizlet Quiz</h1>
             <a href="./game.html" class="btn">Play</a>
-            <a href="./hghscores.html" class="btn">High Scores</a>
+            <a href="./highscores.html" class="btn">High Scores</a>
         </div>
     </div>
 </body>
