--- a/html/game.html
+++ b/html/game.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <!-- #idname.classname.classname + tab+tab for quick auto generation-->
-        <div id="game" class="justify-center flex-column">
+        <div id="loader"></div>
+        <div id="game" class="justify-center flex-column hidden">
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">Question</p>
