Fixed for deployment

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="refresh" content="0; url=https://pleabanshee.github.io/html/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quizlet Quiz</title>
+    <link rel="stylesheet" href="../css/app.css"/>
 </head>
 <body>
-    
+    <!-- For quick class and id generations, enter . or #, type class name and press tab+tab-->
+    <div class="container">
+        <div id="home" class="flex-center flex-column"> 
+            <h1>Quizlet Quiz</h1>
+            <a href="./game.html" class="btn">Play</a>
+            <a href="./highscores.html" class="btn">High Scores</a>
+        </div>
+    </div>
 </body>
 </html>
