--- a/html/finish.html
+++ b/html/finish.html
@@ -29,7 +29,7 @@
                 Save
                 </button>
                 <a class="btn" href="./game.html">Play Again</a>
-                <a class="btn" href="./index.html">Go Home</a>  
+                <a class="btn" href="../index.html">Go Home</a>  
             </form>
         </div>
     </div>
