--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div id="home" class="flex-center flex-column"> 
             <h1>Quizlet Quiz</h1>
-            <a href="./game.html" class="btn">Play</a>
-            <a href="./highscores.html" class="btn">High Scores</a>
+            <a href="./html/game.html" class="btn">Play</a>
+            <a href="./html/highscores.html" class="btn">High Scores</a>
         </div>
     </div>
 </body>
