--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizlet Quiz</title>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body>
     <!-- For quick class and id generations, enter . or #, type class name and press tab+tab-->
