--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizlet Quiz</title>
-    <link rel="stylesheet" href="./css/app.css"/>
+    <link rel="stylesheet" href="/css/app.css"/>
 </head>
 <body>
     <!-- For quick class and id generations, enter . or #, type class name and press tab+tab-->
     <div class="container">
         <div id="home" class="flex-center flex-column"> 
             <h1>Quizlet Quiz</h1>
-            <a href="./html/game.html" class="btn">Play</a>
-            <a href="./html/highscores.html" class="btn">High Scores</a>
+            <a href="/html/game.html" class="btn">Play</a>
+            <a href="/html/highscores.html" class="btn">High Scores</a>
         </div>
     </div>
 </body>
